# distributed-key-management

./:  Makefile.toml  Cargo.toml  build.rs  client.rs  grpc_server.rs  http_server.rs  main.rs  rustfmt.toml  server.rs
common/: constants.rs  crypto.rs  messages.rs  mod.rs  nodes.rs
config/: app.rs  database.rs  microservice.rs  mod.rs
config/node_info/: node1.env  node2.env  node3.env
controllers/: commitment_controller.rs  key_assignment_controller.rs  mod.rs  shared_key_controller.rs  wallet_controller.rs
dtos/: assign_key_dto.rs  create_commitment_dto.rs  create_wallet_dto.rs  lookup_shared_secret_dto.rs  lookup_wallet_dto.rs  mod.rs  node_commitment_dto.rs  node_shared_secret_dto.rs
grpc/: controller.rs  mod.rs  service.rs  types.rs
grpc/protos/: p2p.proto
schemas/: commitment_schema.rs  key_assignment_schema.rs  key_index_schema.rs  mod.rs  shared_key_schema.rs  wallet_schema.rs
services/: commitment_service.rs  mod.rs  shared_key_service.rs  wallet_service.rs
src/: main.rs
src/common/: google_api.rs  messages.rs  nodes.rs  verifiers.rs
src/config/: app.rs  db.rs
src/config/node_info/: node2.env  node3.env
src/controllers/: commitment_controller.rs  shared_key_controller.rs
src/dtos/: lookup_wallet_dto.rs  mod.rs  node_commitment_dto.rs  node_shared_secret_dto.rs
src/schemas/: mod.rs  wallet_schema.rs
src/services/: commitment_service.rs  mod.rs  shared_key_service.rs
