[package]
name = "distributed-key-management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "node"
path = "main.rs"

[[bin]]
name = "p2p"
path = "grpc/main.rs"

[dependencies]
lazy_static = "1.4.0"
secp256k1 = { version = "0.28.0", features = ["hashes", "global-context", "rand"] }
actix-web = "4"
serde = "1.0.136"
dotenv = "0.15.0"
futures = "0.3"
actix-cors = "0.6.5"
log = "0.4.20"
derive_more = "0.99.17"
env_logger = "0.10.1"
validator = { version = "0.16.1", features = ["derive"] }
hex = "0.4.3"
json = "0.12.4"
bitcoin_hashes = "0.13.0"
num-bigint = "0.4.4"
keccak-hash = "0.10.0"
magic-crypt = "3.1.13"
ecies = "0.2.6"
tonic = "0.10.2"
tonic-reflection = "0.10.2"
prost = "0.12.3"
prost-types = "0.12.3"
tonic-build = "0.9.2"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"]

[build-dependencies]
tonic-build = "0.9.2"
